--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'SignikaSemibold';
-  src: url('Signika-Semibold-webfont.eot');
-  src: url('Signika-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
-       url('Signika-Semibold-webfont.woff') format('woff'),
-       url('Signika-Semibold-webfont.ttf') format('truetype'),
-       url('Signika-Semibold-webfont.svg#SignikaSemibold') format('svg');
+  src: url('../fonts/Signika-Semibold-webfont.eot');
+  src: url('../fonts/Signika-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/Signika-Semibold-webfont.woff') format('woff'),
+       url('../fonts/Signika-Semibold-webfont.ttf') format('truetype'),
+       url('../fonts/Signika-Semibold-webfont.svg#SignikaSemibold') format('svg');
   font-weight: normal;
   font-style: normal;
 }
