100% more firefox support

--- a/styles/style.less
+++ b/styles/style.less
@@ -29,6 +29,7 @@ div#content
   text-shadow: 0 0 4px transparent,
                0 1px 0 transparent;
   -webkit-transition: color 1s linear, text-shadow 1s linear;
+  -moz-transition: color 1s linear, text-shadow 1s linear;
   font: 300% SignikaSemibold, sans-serif;
 }
 
