--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@ div#noscript
   margin: 0 0 0 0;
   width:  100%;
   height: 100%;
-  -moz-animation:annoying 0.5s linear 0 infinite;
+  -moz-animation:annoying 0.5s linear 0s infinite;
   -webkit-animation:annoying 0.5s ease 0 infinite;
   color: red;
   background-color: #d0d0d0;
