--- a/styles/style.less
+++ b/styles/style.less
@@ -33,7 +33,7 @@ div#content
   font: 300% SignikaSemibold, sans-serif;
 }
 
-div.opaque
+div#opaque
 {
   opacity: 1;
   color: #2f2f2f;
@@ -41,7 +41,7 @@ div.opaque
                0 1px 0 #ffffff;
 }
 
-div.small
+div#small
 {
   font-size: 40%;
 }
