--- a/_layouts/header.html
+++ b/_layouts/header.html
@@ -5,6 +5,14 @@
   <link rel="stylesheet/less" type="text/css" href="/styles/style.less">
   <script src="/scripts/less.js" type="text/javascript"></script>
   <script src="/scripts/strings.js" type="text/javascript"></script>
+  <style type="text/css">
+    @-moz-document url-prefix() {
+      a {
+        padding: 0 0 0 0;
+        margin: 0 0 0 0;
+      }
+    }
+  </style>
 </head>
 <body onload="repl()">
 <noscript>
