--- a/styles/style.css
+++ b/styles/style.css
@@ -1,201 +1,22 @@
-@font-face {
-  font-family: 'SignikaSemibold';
-  src: url('/fonts/Signika-Semibold-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'GandhiSans';
-  src: url('/fonts/GandhiSans-Regular-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'GandhiSans';
-  src: url('/fonts/GandhiSans-Italic-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: italic;
-}
-@font-face {
-  font-family: 'GandhiSans';
-  src: url('/fonts/GandhiSans-Bold-webfont.woff') format('woff');
-  font-weight: bold;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'GandhiSans';
-  src: url('/fonts/GandhiSans-BoldItalic-webfont.woff') format('woff');
-  font-weight: bold;
-  font-style: italic;
-}
-body {
-  background: #d0d0d0;
-  font-family: 'GandhiSans', sans-serif;
-  margin: 0 0 0 0;
-}
-div#noscript {
-  visibility: hidden;
-}
-div#postheader {
-  height: 3px;
-  width: 100%;
-  background-image: -webkit-radial-gradient(center, 280px 100%, #000000, #d0d0d0);
-  display: inline-block;
-  margin-bottom: 20px;
-}
-div#faketop {
-  display: inline-block;
-  height: 3px;
-  width: 806px;
-  background-color: #bbb;
-}
-div#header {
-  color: transparent;
-  text-align: center;
-  width: 100%;
-  margin: 25 0 5 0;
-  display: inline-block;
-  text-shadow: 0 0 4px transparent,
-                 0 1px 0 transparent;
-  -webkit-transition: color 1s linear, text-shadow 1s linear;
-  -moz-transition: color 1s linear, text-shadow 1s linear;
-  font: 300% SignikaSemibold, sans-serif;
-}
-div#header div#opaque {
-  opacity: 1;
-  color: #333333;
-  text-shadow: 0 0 4px #949494,
-                   0 1px 0 #fff;
-}
-div#header div#small {
-  font-size: 40%;
-}
-div#header:hover {
-  color: #333333;
-  text-shadow: 0 0 4px #949494,
-                   0 1px 0 #fff;
-}
-div#header a {
-  text-decoration: none;
-  padding: 0 0 0 0;
-  margin: 0 0 0 0;
-  border-radius: 0;
-}
-div#header a:visited {
-  color: #333333;
-}
-div#header a:hover {
-  background: transparent;
-}
-div#allposts {
-  margin-top: 131px;
-  width: 774px;
-  display: inline-block;
-  text-align: center;
-  padding: 10px 14px 10px 12px;
-  color: #333333;
-  font-size: 120%;
-  border: 3px solid #bbb;
-  overflow: scroll;
-}
-div#allposts a {
-  padding: 0 0 0 0;
-}
-div#allposts a .row {
-  padding: 2px 2px 0 2px;
-  margin: 2px 0 2px 0;
-  border-radius: 3px;
-  -webkit-transition: background 0.25s linear;
-  -moz-transition: background 0.25s linear;
-}
-div#allposts a .row:hover {
-  background: #b0b0b0;
-}
-div#allposts a .row .title {
-  float: left;
-  text-align: left;
-  width: 680px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-div#allposts a .row .date {
-  float: right;
-  color: #333333;
-}
-div#copyriot {
-  width: 800px;
-  display: inline-block;
-  font-size: 12px;
-  color: #666666;
-  text-shadow: 0 0 3px #808080;
-}
-div#postbody {
-  width: 776px;
-  display: inline-block;
-  font-size: 120%;
-  text-align: justify;
-  padding: 10px 12px 0 12px;
-  background-color: #bbb;
-  border-radius: 10px;
-  -webkit-box-shadow: 0 0 10px #bbb;
-  -moz-box-shadow: 0 0 10px #bbb;
-  box-shadow: 0 0 10px #bbb;
-}
-div#content {
-  font-size: 18px;
-  word-break: break-word;
-  -webkit-hyphens: auto;
-  -moz-hyphens: auto;
-  hyphens: auto;
-}
-div#content p + p {
-  margin: 0 0 10px 0;
-}
-div#content > p {
-  margin: 10px 0 10px 0;
-}
-div#posttitle {
-  font-size: 18px;
-  font-size: 150%;
-  font-style: italic;
-  word-break: break-all;
-  -webkit-hyphens: auto;
-  -moz-hyphens: auto;
-  hyphens: auto;
-}
-div #postdates {
-  margin: 5px 0 5px 0;
-  width: 100%;
-  font-size: 75%;
-  color: #808080;
-  float: left;
-  text-align: right;
-}
-div #postdates .datelabel {
-  -webkit-transition: color 0.5s linear;
-  -moz-transition: color 0.5s linear;
-}
-div #postdates .datelabel:hover {
-  color: black;
-}
-::selection {
-  background: #FFF;
-}
-a {
-  text-decoration: none;
-  padding: 1px 2px 0 2px;
-  margin: -1px -2px 0 -2px;
-  border-radius: 3px;
-  -webkit-transition: background 0.25s linear;
-  -moz-transition: background 0.25s linear;
-}
-a:link {
-  color: #595959;
-}
-a:visited {
-  color: #595959;
-}
-a:hover {
-  background: #d0d0d0;
-}
+@font-face{font-family:'SignikaSemibold';src:url('/fonts/Signika-Semibold-webfont.woff') format('woff');font-weight:normal;font-style:normal;}@font-face{font-family:'GandhiSans';src:url('/fonts/GandhiSans-Regular-webfont.woff') format('woff');font-weight:normal;font-style:normal;}@font-face{font-family:'GandhiSans';src:url('/fonts/GandhiSans-Italic-webfont.woff') format('woff');font-weight:normal;font-style:italic;}@font-face{font-family:'GandhiSans';src:url('/fonts/GandhiSans-Bold-webfont.woff') format('woff');font-weight:bold;font-style:normal;}@font-face{font-family:'GandhiSans';src:url('/fonts/GandhiSans-BoldItalic-webfont.woff') format('woff');font-weight:bold;font-style:italic;}body{background:#d0d0d0;font-family:'GandhiSans',sans-serif;margin:0 0 0 0;}body img{display:block;margin-left:auto;margin-right:auto;border:3px solid #888;}body img:hover{border:3px solid #222;}
+div#noscript{visibility:hidden;}
+div#postheader{height:3px;width:100%;background-image:-webkit-radial-gradient(center, 280px 100%, #000000, #d0d0d0);display:inline-block;margin-bottom:20px;}
+div#faketop{display:inline-block;height:3px;width:806px;background-color:#bbb;}
+div#header{color:transparent;text-align:center;width:100%;margin:25 0 5 0;display:inline-block;text-shadow:0 0 4px transparent, 0 1px 0 transparent;-webkit-transition:color 1s linear,text-shadow 1s linear;-moz-transition:color 1s linear,text-shadow 1s linear;font:300% SignikaSemibold,sans-serif;}div#header div#opaque{opacity:1;color:#333333;text-shadow:0 0 4px #949494, 0 1px 0 #fff;}
+div#header div#small{font-size:40%;}
+div#header:hover{color:#333333;text-shadow:0 0 4px #949494, 0 1px 0 #fff;}
+div#header a{text-decoration:none;padding:0 0 0 0;margin:0 0 0 0;border-radius:0;}div#header a:visited{color:#333333;}
+div#header a:hover{background:transparent;}
+div#allposts{margin-top:131px;width:774px;display:inline-block;text-align:center;padding:10px 14px 10px 12px;color:#333333;font-size:120%;border:3px solid #bbb;}div#allposts a{padding:0 0 0 0;}div#allposts a .row{padding:2px 2px 0 2px;margin:2px 0 2px 0;border-radius:3px;-webkit-transition:background 0.25s linear;-moz-transition:background 0.25s linear;}div#allposts a .row:hover{background:#b0b0b0;}
+div#allposts a .row .title{float:left;text-align:left;width:670px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+div#allposts a .row .date{float:right;color:#333333;}
+div#copyriot{width:800px;display:inline-block;font-size:12px;color:#666666;text-shadow:0 0 3px #808080;}
+div#postbody{width:776px;display:inline-block;font:400 120% 'Lato',sans-serif;text-align:justify;padding:10px 12px 0 12px;background-color:#bbb;border-radius:10px;-webkit-box-shadow:0 0 10px #bbb;-moz-box-shadow:0 0 10px #bbb;box-shadow:0 0 10px #bbb;}div#postbody strong{font-weight:700;}
+div#postbody em{font-style:italic;}
+div#content{font-size:18px;line-height:130%;word-break:break-word;-webkit-hyphens:auto;-moz-hyphens:auto;hyphens:auto;}div#content p+p{margin:0 0 10px 0;}
+div#content>p{margin:10px 0 10px 0;}
+div#posttitle{font-size:18px;font-size:150%;font-style:italic;word-break:break-all;-webkit-hyphens:auto;-moz-hyphens:auto;hyphens:auto;}
+div #postdates{margin:5px 0 5px 0;width:100%;font-size:75%;color:#808080;float:left;text-align:right;}div #postdates .datelabel{-webkit-transition:color 0.5s linear;-moz-transition:color 0.5s linear;}div #postdates .datelabel:hover{color:black;}
+::selection{background:#FFF;}
+a{text-decoration:none;border-bottom:2px solid #bbb;border-radius:5px;-webkit-transition:border-color 0.25s linear;-moz-transition:border-color 0.25s linear;}a:link{color:#444477;}a:link:hover{border-bottom-color:#444477;}
+a:visited{color:#555555;}a:visited:hover{border-bottom-color:#555555;}
