--- a/_layouts/header1.html
+++ b/_layouts/header1.html
@@ -1,12 +1,6 @@
-<html>
-<head>
-  <link rel="icon" type="image/png" href="/favicon.png">
-  <link rel="stylesheet" type="text/css" href="/styles/style.css">
-  <!-- <link rel="stylesheet/less" type="text/css" href="/styles/style.less"> -->
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script> -->
-  <script src="/scripts/strings.js" type="text/javascript"></script>
-  <!-- <script src="/scripts/interface.js" type="text/javascript"></script> -->
-  <title>{{ page.title }}</title>
+---
+layout: common
+---
 </head>
 <body>
 <noscript>
