--- a/_layouts/header2.html
+++ b/_layouts/header2.html
@@ -1,25 +1,6 @@
-<html>
-<head>
-  <link rel="icon" type="image/png" href="/favicon.png">
-  <link rel="stylesheet" type="text/css" href="/styles/style.css">
-  <!-- <link rel="stylesheet/less" type="text/css" href="/styles/style.less"> -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
-  <!-- // <script src="/scripts/less.js" type="text/javascript"></script> -->
-  <!--<script type="text/javascript" charset="utf-8">
-      less.env = "development";
-      less.watch();
-  </script>-->
-  <script src="/scripts/strings.js" type="text/javascript"></script>
-  <!-- // <script src="/scripts/interface.js" type="text/javascript"></script> -->
-  <style type="text/css">
-    @-moz-document url-prefix() {
-      a {
-        padding: 0 0 0 0;
-        margin: 0 0 0 0;
-      }
-    }
-  </style>
-  <title>{{ page.title }}</title>
+---
+layout: common
+---
 </head>
 <body>
 <noscript>
